Bug fixes: - Fix company and commodity sort issues due to callback functions - Add hover colour to mine dots, remove fill on province selection, and dynamically drop legend items - Fix company bar slider update behaviour - Fix issue where tooltip would go off the screen causing a scroll bar to appear - Fix bugs in commodity slider - Fix clipping issues with choropleth map and update positioning of other views - Add more explainer text to Choropleth - Update logic for company y-axis to set domain based on initial dataset load

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,6 @@ body {
   padding: 0;
 }
 
-
-#map-back-button {
-}
-
 .slider-label {
   text-anchor: middle;
   font-weight: bold;
@@ -109,4 +105,11 @@ body {
   color: #000;
   font-size: 14px;
   font-weight: 600;
+}
+
+
+.explainer-text {
+  font-size: 14px;
+  font-style: italic;
+  cursor: default;
 }
